--- a/buy.css
+++ b/buy.css
@@ -55,6 +55,8 @@ header {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   gap: 15px;
+  display: grid;
+  gap: 15px;
 }
 
 .product {
@@ -308,7 +310,63 @@ button.add-to-cart:hover {
     font-size: 21px;
   }
 }
+@media (max-width: 768px) {
+  .cart-icon {
+    cursor: pointer;
+    position: relative;
+    font-size: 24px;
+    text-decoration: none;
+    right: 53px;
+  }
+  .products-container {
+    display: grid;
+    gap: 15px;
+  }
+  .product {
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    padding: 35px;
+    transition: transform 0.2s;
+    height: 205px;
+    width: 147px;
+    cursor: pointer;
+    position: relative;
+    font-size: 17px;
+    text-decoration: none;
+    right: 35px;
+  }
+  .product:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 15px rgb(22, 118, 139);
+  }
+  .product img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 6px;
+  }
+  .product h3 {
+    margin: 10px 0 5px;
+  }
+}
 
+@media (max-width: 480px) {
+  .cart-icon {
+    cursor: pointer;
+    position: relative;
+    font-size: 21px;
+    text-decoration: none;
+    right: 5px;
+  }
+  .products-container {
+    display: grid;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+}
 /* body {
   font-family: Arial, sans-serif;
   margin: 20px;
@@ -545,54 +603,4 @@ button.add-to-cart:hover {
   background: #ffffff;
   margin-top: 15px;
 }*/
-@media (max-width: 768px) {
-  .cart-icon {
-    cursor: pointer;
-    position: relative;
-    font-size: 24px;
-    text-decoration: none;
-    right: 53px;
-  }
-  .products-container {
-    display: grid;
-    gap: 15px;
-  }
-  .product {
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    padding: 35px;
-    transition: transform 0.2s;
-    height: 205px;
-    width: 147px;
-    cursor: pointer;
-    position: relative;
-    font-size: 17px;
-    text-decoration: none;
-    right: 35px;
-  }
-  .product:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 15px rgb(22, 118, 139);
-  }
-  .product img {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 6px;
-  }
-  .product h3 {
-    margin: 10px 0 5px;
-  }
-}
 
-@media (max-width: 480px) {
-  .cart-icon {
-    cursor: pointer;
-    position: relative;
-    font-size: 21px;
-    text-decoration: none;
-    right: 5px;
-  }
-}
